corpus/custom_item
=====================
Custom Item
=====================

<custom_item>
  type            : PASSWORD_POLICY
  description     : "1.1.1 Ensure 'Enforce password history' is set to '24 or more password(s)'"
  info            : "This policy setting determines the number of renewed, unique passwords that have to be associated with a user account before you can reuse an old password.

The value for this policy setting must be between 0 and 24 passwords.

The default value for Windows Vista is 0 passwords, but the default setting in a domain is 24 passwords.

To maintain the effectiveness of this policy setting, use the Minimum password age setting to prevent users from repeatedly changing their password.

The recommended state for this setting is: '24 or more password(s)'.

Rationale:
The longer a user uses the same password, the greater the chance that an attacker can determine the password through brute force attacks.

Also, any accounts that may have been compromised will remain exploitable for as long as the password is left unchanged.

If password changes are required but password reuse is not prevented, or if users continually reuse a small number of passwords, the effectiveness of a good password policy is greatly reduced.

If you specify a low number for this policy setting, users will be able to use the same small number of passwords repeatedly.

If you do not also configure the Minimum password age setting, users might repeatedly change their passwords until they can reuse their original password."
  solution        : "To establish the recommended configuration via GP, set the following UI path to '24 or more password(s)':


Computer Configuration\Policies\Windows Settings\Security Settings\Account Policies\Password Policy\Enforce password history


Impact:
The major impact of this configuration is that users must create a new password every time they are required to change their old one.

If users are required to change their passwords to new unique values, there is an increased risk of users who write their passwords somewhere so that they do not forget them.

Another risk is that users may create passwords that change incrementally (for example, password01, password02, and so on) to facilitate memorization but make them easier to guess.

Also, an excessively low value for the Minimum password age setting will likely increase administrative overhead, because users who forget their passwords might ask the help desk to reset them frequently."
  reference       : "800-53|IA-5,HIPAA|164.308(a)(5)(ii)(D),PCI-DSSv3.1|8.2.5,PCI-DSSv3.2|8.2.5,800-171|3.5.8,CSF|PR.AC-1,ISO/IEC-27001|A.9.4.3,ITSG-33|IA-5,SWIFT-CSCv1|4.1,TBA-FIISB|26.2.3,CSCv6|16.5,LEVEL|1S"
  see_also        : "https://workbench.cisecurity.org/files/1929"
  value_data      : ""
  value_type      : POLICY_DWORD
  value_data      : [24..MAX]
  password_policy : ENFORCE_PASSWORD_HISTORY
</custom_item>

---

(audit
  (custom_item
    (check_nonstring_element)
    (check_string_element)
    (check_string_element)
    (check_string_element)
    (check_string_element)
    (check_string_element)
    (check_empty_element)
    (check_nonstring_element)
    (check_nonstring_element)
    (check_nonstring_element)))
